--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
 <li><a href="https://raw.githubusercontent.com/mittelmark/DGTcl/master/apps/tpack/tpack.tcl">tpack.tcl - standalone script</a></li>
 </ul>
 <p>Version 0.2.0 adds support for single file applications. To reduce bandwidth you can as well create compressed versions of your application.</p>
+<p><strong>pandoc-tcl-filter - embed and process Tcl code in documents</strong></p>
+<p>The Pandoc application is a great document converter and processing tool. The pandoc-tcl-filter folder contains two Pandoc filters for Tcl code and for Graphviz dot files. To know more about Pandoc filters have a look at Pandocs manual pages <a href="%5Bhttps://pandoc.org/filters.html%5D">https://pandoc.org/filters.html</a>. These filter allow you to directly embed Tcl code and Dot file code into your documents and produce code output or figures using these code chunks.</p>
+<ul>
+<li><a href="http://htmlpreview.github.io/?https://github.com/mittelmark/DGTcl/blob/master/pandoc-tcl-filter/Readme.html">pandoc-tcl-filter Readme</a></li>
+<li><a href="http://htmlpreview.github.io/?https://github.com/mittelmark/DGTcl/blob/master/pandoc-tcl-filter/pandoc-tcl-filter.html">pandoc-tcl-filter Manual</a></li>
+<li><a href="https://downgit.github.io/#/home?url=https://github.com/mittelmark/DGTcl/tree/master/pandoc-tcl-filter">application Gitdown-Download</a></li>
+<li><a href="https://mittelmark.github.io/release/pandoc-tcl-filter.tapp">single file Tcl script</a></li>
+</ul>
 </body>
 </html>
