manual pages added

--- a/R-docs/hanna/index.html
+++ b/R-docs/hanna/index.html
@@ -3,15 +3,12 @@
 <head><title>R: Vignettes and other documentation</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-<link rel="stylesheet" type="text/css" href="/doc/html/R.css" />
+<link rel="stylesheet" type="text/css" href="help/R.css" />
 </head><body><div class="container">
 <h1> Vignettes and other documentation
-<img class="toplogo" src="/doc/html/Rlogo.svg" alt="[R logo]" />
+<img class="toplogo" src="help/Rlogo.svg" alt="[R logo]" />
 </h1>
 <hr/>
-<div style="text-align: center;">
-<a href="/doc/html/index.html"><img class="arrow" src="/doc/html/up.jpg" alt="[Top]" /></a>
-</div>
 <h2>Vignettes from package 'hanna'</h2>
 <table width="100%">
 <col style="width: 22%;" />
@@ -20,20 +17,20 @@
 <col style="width:  8%;" />
 <col style="width:  8%;" />
 <col style="width:  8%;" />
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/hanna/doc/figures.html">hanna::figures</a></td>
+<tr><td style="text-align: right; vertical-align: top;"><a href="figures.html">hanna::figures</a></td>
 <td></td><td valign="top">Hermanussen et. al. (2023) - Paper figures</td>
-<td valign="top"><a href="../../../library/hanna/doc/figures.html">HTML</a></td>
-<td valign="top"><a href="../../../library/hanna/doc/figures.Rmd">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/hanna/doc/figures.R">R code</a></td></tr>
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/hanna/doc/hgraph-tutorial.html">hanna::hgraph-tutorial</a></td>
+<td valign="top"></td>
+<td valign="top"></td>
+<td valign="top" style="white-space: nowrap"></td></tr>
+<tr><td style="text-align: right; vertical-align: top;"><a href="hgraph-tutorial.html">hanna::hgraph-tutorial</a></td>
 <td></td><td valign="top">hgraph introduction</td>
-<td valign="top"><a href="../../../library/hanna/doc/hgraph-tutorial.html">HTML</a></td>
-<td valign="top"><a href="../../../library/hanna/doc/hgraph-tutorial.Rmd">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/hanna/doc/hgraph-tutorial.R">R code</a></td></tr>
-<tr><td style="text-align: right; vertical-align: top;"><a href="../../../library/hanna/doc/simul-tutorial.html">hanna::simul-tutorial</a></td>
+<td valign="top"></td>
+<td valign="top"></td>
+<td valign="top" style="white-space: nowrap"></td></tr>
+<tr><td style="text-align: right; vertical-align: top;"><a href="simul-tutorial.html">hanna::simul-tutorial</a></td>
 <td></td><td valign="top">Example simulations for the hanna package using the simul module</td>
-<td valign="top"><a href="../../../library/hanna/doc/simul-tutorial.html">HTML</a></td>
-<td valign="top"><a href="../../../library/hanna/doc/simul-tutorial.Rmd">source</a></td>
-<td valign="top" style="white-space: nowrap"><a href="../../../library/hanna/doc/simul-tutorial.R">R code</a></td></tr>
+<td valign="top"></td>
+<td valign="top"></td>
+<td valign="top" style="white-space: nowrap"></td></tr>
 </table>
 </div></body></html>
